Bug 120803 - kde5: Impress crashes when exiting presentation mode
Summary: kde5: Impress crashes when exiting presentation mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: KDE
  Show dependency treegraph
 
Reported: 2018-10-22 18:13 UTC by Michael Weghorn
Modified: 2018-10-23 18:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
GDB backtrace (12.12 KB, text/plain)
2018-10-22 18:13 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2018-10-22 18:13:05 UTC
Version: 6.2.0.0.alpha1+
Build ID: cd9aa5bc508244082b4baf4a3094875bf2c6f992
CPU threads: 4; OS: Linux 4.18; UI render: default; VCL: kde5; 
Locale: en-GB (en_GB.UTF-8); Calc: threaded

This is specific to the qt5/kde5 VCL plugins. It works e.g. with gtk3.

Steps to reproduce:

1) create a new presentation consisting of just one slide in Impress
2) start presentation mode, e.g. by pressing F5
   (side note: until bug 120451 is fixed, you'll need two screens, otherwise a crash
3) left click to actually start the presentation
   (side note: this is necessary due tobug 119718)
4) make the "presentation window" the active one, not the one with presenter console
5) click to advance (Text "Click to exit presentation..." appears, since slideshow is over)
6) click again (or press Esc)

Result: LibreOffice crashes
Comment 1 Michael Weghorn 2018-10-22 18:13:40 UTC
Created attachment 145912 [details]
GDB backtrace
Comment 2 Katarina Behrens (Inactive) 2018-10-23 09:52:20 UTC
Yep 

(master on f806a2832aee62efc0e0404f7c24d53aaaf814d0 i.e. with bug 102451 fixed)
Comment 3 Commit Notification 2018-10-23 12:27:31 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=509c017f5a6ee6b7c1bb9b61b36aef58a06afd27

tdf#120803: avoid crash if no valid vcl::Window

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Katarina Behrens (Inactive) 2018-10-23 14:25:59 UTC
There's bug 119719 still, but no crash anymore
Comment 5 Michael Weghorn 2018-10-23 18:40:57 UTC
Fix verified with

Version: 6.2.0.0.alpha1+
Build ID: 25af42bc70e1a0a61d2ea90d7b0ef1ed6000ed69
CPU threads: 4; OS: Linux 4.18; UI render: default; VCL: kde5; 
Locale: en-GB (en_GB.UTF-8); Calc: threaded