tdf#120803: avoid crash if no valid vcl::Window

when called from the destructor it is no longer alive

Change-Id: Ia68272253f9c459b2647a0bd389e833fb0b519e3
Reviewed-on: https://gerrit.libreoffice.org/62228
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>